--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,7 @@ services:
     image: postgres
     ports:
       - "5432:5432"
-    volumes:
-      - .\init.sql:\docker-entrypoint-initdb.d\init.sql
+    environment:
+      POSTGRES_DB: projbase
+      POSTGRES_USER: admn
+      POSTGRES_PASSWORD: adminn
